GoalTracker/force-app/main/default/objects/Event_Sponsor__c/Event_Sponsor__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Event Sponsor</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Event Sponsor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>