GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Sponsors</relationshipLabel>
    <relationshipName>Event_Sponsors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>