GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Sponsors</relationshipLabel>
    <relationshipName>Event_Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>