GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Event</label>
    <referenceTo>AQB__Event__c</referenceTo>
    <relationshipLabel>Event Sponsors</relationshipLabel>
    <relationshipName>Event_Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>