GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <description>AQ_Custom</description>
    <label>Sponsor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue Host</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Donor (In-kind)</fullName>
            </value>
            <value>
                <fullName>Underwriter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>