GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Sponsorship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Amount__c</fullName>
    <description>AQ_Custom</description>
    <label>Sponsorship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>