GoalTracker/force-app/main/default/objects/Event_Sponsor__c/fields/Sponsorship_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Comment__c</fullName>
    <description>AQB_Custom</description>
    <label>Sponsorship Comment</label>
    <type>TextArea</type>
</CustomField>